smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/invalid-newline-after-shape-type.smithy
// Syntax error at line 5, column 10: Expected SPACE(' ') but found NEWLINE('\n') | Model
$version: "2.0"
namespace smithy.example

structure
Foo {}
